cmake_minimum_required(VERSION 2.8.3)
project(gps)

find_package(catkin REQUIRED
    rospy
    sensor_msgs
    diagnostics
)

################################################
## Declare ROS messages, services and actions ##
################################################

################################################
## Declare ROS dynamic reconfigure parameters ##
################################################

###################################
## catkin specific configuration ##
###################################

###########
## Build ##
###########

#############
## Install ##
#############

#############
## Testing ##
#############
