<?xml version="1.0"?>
<package format="2">
  <name>gps</name>
  <version>0.0.0</version>
  <description>The gps package</description>

  <maintainer email="kyungpyo@todo.todo">kyungpyo</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <export>
  </export>
</package>
